--- a/login.html
+++ b/login.html
@@ -4,16 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-login.css">
+    <link rel="stylesheet" href="style.css">
     <title>Login</title>
 </head>
 
 <body>
     <div class="main-login">
         <div class="left-login">
-            <h1>Faça seu login na Pet LeVi</h1>
+            <h1>Faça seu login ou Casdatre-se</h1>
             <img src="animais.svg" class="left-login-image" alt="Img animação">
         </div>
+
+        <div class="cadastro">
+            <div class="card-cadastro">
+                <h1>Cadastre-se</h1>
+                <div class="fieldset">
+                    <div class="textfield">
+                        <label for="nome">Digite seu nome:</label>
+                        <input type="text" name="nome" placeholder="Digite seu nome:">
+                    </div>
+                    <div class="textfield">
+                        <label for="email">Digite seu email:</label>
+                        <input type="text" name="email" placeholder="Digite seu email:">
+                    </div>
+                    <div class="textfield">
+                        <label for="email">Confirme seu email:</label>
+                        <input type="text" name="email" placeholder="Digite seu email:">
+                    </div>
+                    <div class="textfield">
+                        <label for="senha">Crie uma senha:</label>
+                        <input type="password" name="senha" placeholder="Min. 6 caracteres">
+                    </div>
+                    <div class="textfield">
+                        <label for="senha">Confirme a senha:</label>
+                        <input type="password" name="senha" placeholder="">
+                    </div>
+                </div>
+
+                <button class="btn-cadastro">Cadastra-se</button>
+            </div>
+        </div>
+
         <div class="right-login">
             <div class="card-login">
                 <h1>Login</h1>
