Alteracoes na tela de login

--- a/marketplace-pet/cadastro.html
+++ b/marketplace-pet/cadastro.html
@@ -5,12 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-cadastro.css">
+    <link rel="stylesheet" href="./css/style-cadastro.css">
     <title>Cadastro</title>
 </head>
 
 <body>
-    <div class="left-login">
+    <div class="main-cadastro">
+        <div class="imagem-cadastro">
+            <img src="./assets/animais.svg" class="left-cadastro-imagem" alt="Img animação">
+        </div>
         <div class="card-cadastro">
             <h1>Cadastre-se</h1>
             <div class="fieldset">
