--- a/marketplace-pet/pagina-inicial.html
+++ b/marketplace-pet/pagina-inicial.html
@@ -11,18 +11,16 @@
     <link rel="stylesheet" href="https://unpkg.com/FortAwesome/Font-Awesome/blob/6.x/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect"
-        href="https://www.petz.com.br/produto/fantasia-de-dinossauro-cansei-de-ser-gato-verde-170630">
     <link
         href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Quicksand:wght@300;400;500;600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style-pg-inicial.css">
-    <title>Lojinha LeVi</title>
+    <title>Pet LeVi</title>
 </head>
 
 <body>
     <header>
-        <a href="#" class="logo"><i class='bx bxs-dog'></i><i class='bx bxs-cat'></i>LeVi</a>
+        <a href="#" class="logo"><i class='bx bxs-dog'></i><i class='bx bxs-cat'></i> Pet LeVi</a>
 
         <ul class="nav">
             <li><a class="nav-link" href="#">Visão Geral</a></li>
@@ -38,9 +36,30 @@
 
     <section class="home">
         <div class="home-img">
-            <img src="product1.png" class='one'>
+            <img src="golden-salmao.png" class="one">
+        </div>
+
+        <div class="home-text">
+            <h1>Ração Golden Para<br>Gatos Castrados</h1>
+            <h5>Sabor salmão 1,0kg</h5>
+            <h3>R$31,99</h3>
+            <a href="#" class="btn">Adicionar ao carrinho</a>
         </div>
     </section>
+
+    <div class="main">
+        <div class="row1">
+            <li><img src="golden-salmao-main.png" onclick="slider('golden-salmao.png')"></li>
+        </div>
+
+        <div class="row2">
+            <li><img src="golden-carne-main.png" onclick="slider('golden-carne-main.png')"></li>
+        </div>
+
+        <div class="row3">
+            <li><img src="golden-frango-main.png" onclick="slider('golden-frango-main.png')"></li>
+        </div>
+    </div>
 
 </body>
 
